# so.golasso

./: .gitignore  README.md  app.py  config.py  logs.txt  main.py  pyproject.toml  render.yaml  requirements.txt  scheduler.py  test_html.py  test_instagram.py  test_rss.py  test_twitter.py
ai_writer/: README.md  ab_testing.py  article_generator.py  content_clustering.py  content_scheduler.py  content_scorer.py  main.py  performance_monitor.py  requirements.txt  trend_analyzer.py
attached_assets/: Pasted-News-Websites-RSS-HTML-Scraping-These-are-the-top-Brazilian-football-news-websites-Website-URL-1741963534802.txt
backend/: Dockerfile  Dockerfile.scheduler  alembic.ini  deploy-staging.bat  docker-compose.staging.yml  docker-compose.yml  pytest.ini  render.yaml  requirements.txt  run_migrations.py  run_tests.bat  run_tests.py  run_tests.sh  view_report.bat  view_tests.py
data/: config.json  news_20250314_103607.json  news_20250314_103610.json  news_20250314_103639.json  news_20250314_105321.json  news_20250314_105413.json  news_20250314_105459.json  news_20250314_105532.json  news_20250314_105604.json  news_20250314_105618.json  news_20250314_143221.json  news_20250314_143246.json  news_20250314_143714.json  news_20250314_143803.json  news_20250314_143856.json  news_20250314_143931.json  news_20250314_144011.json  news_20250314_144058.json  news_20250314_144107.json  news_20250314_144149.json  news_20250314_144320.json  news_20250314_144615.json  news_20250314_144639.json  news_latest.json  stats.json  twitter_20250314_105324.json  twitter_latest.json
(+84 files in other folders)
