[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.3",
    "email-validator>=2.2.0",
    "feedparser>=6.0.11",
    "firebase-admin>=6.7.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "instaloader>=4.14.1",
    "psycopg2-binary>=2.9.10",
    "scheduler>=0.8.8",
    "trafilatura>=2.0.0",
    "tweepy>=4.15.0",
    "twilio>=9.5.0",
]
